# qt3d-transform-gizmo

./: .gitignore  Floor.qml  README.md  SOrbitCameraController.qml  TransformGizmo.qml  TransformGizmoBeam.qml  TransformGizmoPlane.qml  main.cpp  main.py  main.qml  pyproject.toml  qml.qrc  qt3d-transform-gizmo.pro
